TTK-20738 fix sound button design on firefox

--- a/Resources/public/paella/player/resources/style/style_light_small.css
+++ b/Resources/public/paella/player/resources/style/style_light_small.css
@@ -2332,6 +2332,7 @@ a.btn {
 .range input[type=range] {
   display: block;
   margin: 13px 0;
+  max-height: 4px;
 }
 /* Scrollbar - Google Chrome */
 input[type=range]::-webkit-slider-runnable-track {
